--- a/data/rules.yml
+++ b/data/rules.yml
@@ -7,7 +7,19 @@ rules:
   - intent: goodbye
   - action: utter_goodbye
 
-- rule: Say 'I am a bot' anytime the user challenges
+- rule: Say hello anytime the user says hello
   steps:
-  - intent: bot_challenge
-  - action: utter_iamabot
+  - intent: greet
+  - action: utter_greet
+
+- rule: initiate advisor matching
+  steps:
+  - intent: match_with_advisor
+  - action: advisor_form
+  - active_loop: advisor_form
+
+- rule: submit advisor form
+  steps:
+  - active_loop: advisor_form
+  - active_loop: null
+  - action: utter_matched_advisor
