--- a/data/stories.yml
+++ b/data/stories.yml
@@ -2,29 +2,10 @@ version: "3.1"
 
 stories:
 
-- story: happy path
+- story: match advisor
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
-
-- story: sad path 1
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: affirm
-  - action: utter_happy
-
-- story: sad path 2
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: deny
-  - action: utter_goodbye
+  - intent: match_with_advisor
+  - action: advisor_form
+  - active_loop: advisor_form
+  - active_loop: null
+  - action: utter_matched_advisor
